# sdk

./: .gitignore  mkdocs.yaml  pyproject.toml  readme.md
docs/: index.md
docs/bench/: datasets-and-code.md  index.md  leaderboard.md  method.md  methodology.md
docs/learn/: dynamic-function-generation.md  hello-world.md  multimodal-input.md  structuring-and-scaling.md
docs/setup/: models.md  tools.md
docs/theme/: main.html
examples/: hello-world.py  using-the-sdk.py
schemas/: function.schema.json
