[project]
name = "offline-function-calling"
version = "0.1.0"
description = "A Python SDK for offline function calling."
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.0",
    "microsandbox>=0.1.8",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-shadcn==0.6.0",
    "pygments>=2.19.1",
]
